--- a/index.html
+++ b/index.html
@@ -15,8 +15,50 @@
             <h1>The Guardian Brothers</h1>
         </div><!-- /header -->
     
-        <div role="main" class="ui-content">
-            <img src="images/imahe.jpg" width="100%">
+        <div role="main" class="ui-content" style="margin-top: 30px">
+            <div class="ui-grid-b">
+                <div class="ui-block-a" style="height:100%;text-align:center">
+                    <div style="border:1px #0f0 solid;">
+                        <img src="images/hamburger.png" 
+                            style="border:1px #f00 solid; width: 80px; margin:5px 15px 18px">
+                        <p style="text-align: center;">hamburger</p>
+                    </div>
+                </div>
+                <div class="ui-block-b" style="height : 100%;text-align:center">
+                    <div>
+                        <img src="images/cookie.png" style="width:80px; margin:5px 15px 18px">
+                            <p style="text-align:center;">cookie</p>
+                        </div>
+                    </div>
+                         <div class="ui-block-c" style="height : 100%;text-align:center">
+                            <div>
+                                <img src="images/cake_big.png" style="width:80px; margin:5px 15px 18px">
+                                    <p style="text-align:center;">cake_big</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="ui-grid-b">
+                            <div class="ui-block-a" style="height:100%;text-align:center">
+                                <div style="border:1px #0f0 solid;">
+                                    <img src="images/cake1.png" 
+                                        style="border:1px #f00 solid; width: 80px; margin:5px 15px 18px">
+                                    <p style="text-align: center;">cake1</p>
+                                </div>
+                            </div>
+                            <div class="ui-block-b" style="height : 100%;text-align:center">
+                                <div>
+                                    <img src="images/coffee.png" style="width:80px; margin:5px 15px 18px">
+                                        <p style="text-align:center;">coffee</p>
+                                    </div>
+                                </div>
+                                     <div class="ui-block-c" style="height : 100%;text-align:center">
+                                        <div>
+                                            <img src="images/blueberries.png" style="width:80px; margin:5px 15px 18px">
+                                                <p style="text-align:center;">blueberries</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                </div><!-- /grid-b -->
         </div><!-- /content -->
     
         <div data-role="footer">
