--- a/cake1.html
+++ b/cake1.html
@@ -9,14 +9,18 @@
 </head>
 
 <body>
-    <div data-role="page">
-            <div data-role="header">
-                <h1>cake_big</h1>
-                </div><!-- /header -->
+
+    <div data-role="page" id="bakerymenu">
+
+            <div data-role="header" data-position="fixed" style="background-color:chocolate">
+                <h1>BAKERY</h1>
+                <a href="index.html" rel="external" 
+                        class="ui-btn ui-corner-all ui-btn-inline ui-mini footer-button-left ui-btn-icon-left ui-icon-power">BACK</a>
+            </div><!-- /header -->
 
                 <div role="main" class="ui-content" style="text-align :center">
                     <ul data-role="listview" data-inset="true">
-                        <li><a href="#">
+                        <li><a href="#Vacuum cake2">
                         <img src="./1/cake2.png">
                         <span class="ui-li-count" style="color:#fff;background-color:red">$120</span>
                         <h2>Vacuum cake2</h2>
@@ -37,7 +41,30 @@
                 </ul>
     </div><!-- /content -->
 
-    <div data-role="footer"> 
+    <div data-role="footer"data-position="fixed"> 
             <h4>Page Footer</h4>
         </div><!-- /footer -->
     </div><!-- /page -->
+
+
+    <div data-role="page" id="Vacuum cake2">
+
+            <div data-role="header" data-position="fixed">
+                <h1>Vacuum cake2</h1>
+                <a href="#bakerymenu" 
+                    class="ui-btn ui-corner-all ui-btn-inline ui-mini footer-button-left ui-btn-icon-left ui-icon-power">back</a>    
+            </div><!-- /header -->
+        
+            <div role="main" class="ui-content" style="text-align: center">
+                <image src="./1/cake2.png" width= "20%">
+                <p><a href="#bakerymenu"data transition="pop">Back to menu</a></p>
+            </div><!-- /content -->
+        
+            <div data-role="footer" data-position="fixed"> 
+                <h4>Page Footer</h4>
+            </div><!-- /footer -->
+        </div><!-- /page -->
+
+</body>
+
+</html>
